# mtuav-competition

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  tdcvrptw.cpp
algorithm/: sdk_test_main.cpp
algorithm/data/: .gitignore  animate_sim_data.py
algorithm/include/: algorithm.h  current_game_info.h  libpathfindwrapper.h  optim_am_swarm.hpp  planner.h  sim_am_swarm.hpp  traj_generation.hpp
algorithm/params/: config_am_swarm copy1014.json  config_am_swarm.json  config_am_swarm.yaml  config_sim_swarm.json
algorithm/src/: algorithm.cpp  current_game_info.cpp  optim_am_swarm copy1014.cpp  optim_am_swarm copy1016.cpp  optim_am_swarm copy1017 world2.cpp  optim_am_swarm copy1017 无snap.cpp  optim_am_swarm copy1017 有snap.cpp  optim_am_swarm.cpp  sim_am_swarm copy1017 world2.cpp  sim_am_swarm.cpp
api/: mtuav_sdk.h  mtuav_sdk_export.h  mtuav_sdk_logging.h  mtuav_sdk_map.h  mtuav_sdk_planner.h  mtuav_sdk_types.h
docs/: note.md
docs/比赛规则/: ForExperts--自定义任务.docx
docs/自己报名玩玩/: 第一届低空经济智能飞行管理挑战赛 报名表（模板）.xlsx
example/: sdk_test_main.cpp
example/algorithm/include/: algorihtm.h  current_game_info.h  planner.h
example/algorithm/src/: algorithm.cpp  current_game_info.cpp
libs/: libpathfindwrapper.h
libvroom-example/: .gitignore  libvroom.cpp
log/: .gitignore
map/: .gitignore
modules/pathfind/: go.sum  main.go  pathfind.go
modules/pathfind/cmd/: go.sum
params/: .gitignore  config.xml  task-drone-001.xml  task-drone-001_log.xml  task-drone-002.xml  task-drone-002_log.xml  task-drone-003.xml  task-drone-003_log.xml  task-drone-004.xml  task-drone-004_log.xml  task-drone-005.xml  task-drone-005_log.xml  task-drone-006.xml  task-drone-006_log.xml  task.xml  task_example_log.xml  task_log.xml
path_finding/examples/: task_example_log.xml
path_finding/include/: gl_const.h  lineofsight.h
path_finding/src/: aa_sipp.cpp  config.cpp  constraints.cpp  dynamicobstacles.cpp  map.cpp  mission.cpp  task.cpp  xmlLogger.cpp
python/: CMakeLists.txt  pymtuav.cc
python/test/: pyplanner_test.py
reference/libvroom/: libvroom.cpp  makefile
reference/localsolver/: tdcvrptw.py
reference/mt-example/algorithm/include/: traj_generation.hpp
reference/mt-example/algorithm/src/: algorithm.cpp  current_game_info.cpp
reference/orca/: CMakeLists.txt  Sphere.cc
reference/rl4co/: mdpdp.py
tests/: test_am.cpp  test_golang.cpp  test_map.cpp  test_openmp.cpp  test_ortools.cpp  test_polylidar.py
visualization/test/: meta_data.pb.txt
